--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "scripts": {
     "start": "ts-node src",
     "fmt": "prettier --parser typescript 'src/**/*.ts{,x}' --write",
-    "lint": "tslint --project tsconfig.json --fix"
+    "lint": "tslint --project tsconfig.json --fix",
+    "test": "run-p test:*",
+    "test:compile": "tsc --noEmit",
+    "test:fmt": "prettier --parser typescript 'src/**/*.ts{,x}' --list-different",
+    "test:lint": "tslint --project tsconfig.json"
   },
   "dependencies": {
     "cors": "^2.8.4",
@@ -19,12 +23,14 @@
     "@types/lodash": "^4.14.104",
     "@types/socket.io": "^1.4.31",
     "@types/uuid": "^3.4.3",
+    "npm-run-all": "^4.1.2",
     "prettier": "^1.10.2",
+    "ts-node": "^5.0.1",
+    "tsc": "^1.20150623.0",
     "tslint": "^5.9.1",
     "tslint-config-prettier": "^1.8.0",
     "tslint-config-standard": "^7.0.0",
     "tslint-plugin-prettier": "^1.3.0",
-    "ts-node": "^5.0.1",
     "typescript": "^2.6.2"
   }
 }
